--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -5,6 +5,7 @@ title: |
 output: 
   html_document: 
     math_method: katex
+    number_sections: true
 ---
 
 ```{r}
@@ -45,7 +46,7 @@ In the first play, the snap happens 3.6 seconds after Travis Kelce begins his mo
 As both plays result in significant gains (1 first down and 1 TD), this highlights Mahomes' ability to react, anticipate, and time the snaps in various situations, elevating the effectiveness of the entire KC offensive unit.
 
 Thus, in every play, it is important for the quarterback to synchronize the snap with the team's offensive execution, in order to keep the defense off balance and offense in control.
-In this work, we propose a multilevel modeling framework to assess a passer's ability to adapt and align the snap with their team's pre-snap motion, culminating in a novel metric for evaluating snap timing variability.
+In this work, **we propose a multilevel modeling framework to assess a passer's ability to adapt and align the snap with their team's pre-snap motion, culminating in a novel metric for evaluating snap timing variability**.
 
 <!-- Story:  -->
 
@@ -90,6 +91,8 @@ We use the following procedure to determine $t_{\text{motion}}$ for each play.
 
 # Multilevel model for snap timing
 
+## Model specification
+
 The observed timing between motion and snap on a single play is surely attributable to numerous variables---from contextual and spatiotemporal features, to the players and teams involved.
 To this end, we fit the following multilevel model:
 
@@ -107,18 +110,20 @@ In detail, we model the response $\delta_i > 0$ (snap timing for play $i$) with 
 Of primary interest, we model the $\phi$ parameter, which represents the shape/variance of the distribution, with QB random effects.
 This allows us to examine the variability in timing among NFL quarterbacks.
 We hypothesize that a higher variability in timing is beneficial because it prevents defenses from predicting when the ball will be snapped.
-This also allows the offense to control the game flow and exploit defensive vulnerabilities.
+This also allows the offense to control the game flow and exploit defensive vulnerabilities. <!-- #ShredIt https://x.com/BarstoolGruden/status/1858193718823522678 -->
 
 We also model the mean parameter $\lambda$ by including random intercepts for the quarterback, motion player, and defensive team.
 Moreover, we account for contextual and personnel information about play $i$ through $\boldsymbol{X_i}$, and estimate the coefficients $\boldsymbol \beta$ as fixed effects.
 These include the current down, number of timeouts remaining for the offense, play clock at the start of motion, motion player's position (WR, TE, RB/FB), and number of players in motion since line-set, as they all can impact the timing between motion and snap.
+
+## Motion type clustering
 
 Another vital feature for modeling snap timing is the type of motion, since it relates to play design.
 For instance, in a play-action pass, a team can fake a jet sweep to set up the QB for a pass.
 This information, however, is not provided in the data, prompting us to consider a clustering algorithm to identify the motion types.
 
 Our clustering input contains tracking data features describing the motion player's location at different events relative to the ball-snapper's location before the snap.
-In particular, we compute the absolute difference in both horizontal (endzone) and vertical (sideline) directions between the motion player at the moment of snap and the snapper.
+In particular, we compute the displacement in both horizontal (endzone) and vertical (sideline) directions between the motion player at ball-snap and the snapper.
 We also include the vertical displacement between the snapper and the motion player at both the start of motion and when they cross the line of scrimmage (LOS).
 If the motion player never crosses LOS on a play, we instead use the location at either the QB event (e.g., forward pass, sack, fumble) or 3 seconds after the snap, depending on which happens sooner.
 The aforementioned 3-second threshold is chosen using the observed distribution of the time elapsed from snap to crossing LOS for plays where motion players do cross LOS, as it captures a sufficiently large fraction (~95%) of the values.
@@ -134,13 +139,16 @@ We choose the optimal number of clusters using BIC (resulting in 7 clusters), an
 
 Our multilevel model is fitted in a Bayesian framework via the `brms` `R` package using 4 parallel chains of 10,000 iterations and 5,000 burn-in draws.
 We perform diagnostics by visually inspecting trace plots as well as computing the $\widehat R$ and effective sample size statistics, and find no issues with model convergence and efficiency.
-Ultimately, we obtain posterior distributions for our model parameters (estimated using MCMC) and perform the following analysis, **focusing on the shape/variance parameter**.
+Ultimately, we obtain posterior distributions for our model parameters (estimated using MCMC) and perform the following analysis.
+
+## QB snap timing variability leaderboard
 
 The following figure displays the posterior distributions for the shape/variance random effect (ordered by posterior mean) for QBs with at least 50 pass attempts across the considered plays.
-For each player, the posterior mean of the shape/variance provides an estimate for their ability to maintain variability in snap timing, **with higher posterior mean values corresponding to greater variability in timing between motion and snap**.
+For each player, the posterior mean of the aforementioned distribution provides an estimate for their ability to maintain variability in snap timing, **with higher posterior means corresponding to greater variability in timing between motion and snap**.
+
 Patrick Mahomes stands out as the top QB according our measure, adding the ability to time snaps as another element to his success.
 Other high-caliber QBs such as Josh Allen and Tom Brady are also among the top players in our rankings.
-Note that there is considerable uncertainty in our estimate, as indicated by the somewhat wide credible intervals, which is unsurprising given our limited sample of motion plays.
+Note that there is considerable uncertainty in our estimates, as demonstrated by the rather wide credible intervals, which is unsurprising given our limited sample of motion plays.
 
 ```{r}
 #| fig-height: 8
@@ -148,10 +156,13 @@ Note that there is considerable uncertainty in our estimate, as indicated by the
 readRDS("../figures/posteriors_slab.rds")
 ```
 
+## Comparison to rate of havoc events
+
 Next, we examine the relationship between the posterior mean for the QB shape/variance random effect and a measure of "havoc rate".
 Here, a havoc event is defined as whether any of the following outcomes are generated on a play: pass breakup, forced fumble, tackle for loss, interception, sack, and pressure.
 The figure below is a scatterplot of the havoc rate and aforementioned posterior mean for the same subset of QBs from earlier across all passing plays from the first nine weeks of the 2022 NFL season (left) and only the considered motion plays (right).
-We observe that lower snap timing variability corresponds to higher rate of facing havoc events created by the opposing defense.
+
+**We observe that lower snap timing variability corresponds to higher rate of facing havoc events created by the opposing defense.**
 This makes intuitive sense, as when there is little variability in timing, the offense is likely to be predictable and experience unfavorable play outcomes.
 In contrast, by varying the duration between motion and snap, offenses can create uncertainty, forcing defenders to play more cautiously which reduces their effectiveness in executing disruptive plays.
 
@@ -163,7 +174,7 @@ readRDS("../figures/corr_havoc.rds")
 
 # Discussion
 
-Variability in snap timing is an essential aspect for an offense to dictate plays and make it difficult for the defense to anticipate and react.
+Variability in snap timing is an essential aspect for an offense to dictate plays and make it difficult for defenses to anticipate and react.
 Through multilevel modeling, we provide an assessment of a quarterback's ability to maintain variable snap timing with their teammates' motion.
 We demonstrate that higher variability in snap timing is beneficial for the passing game, as it relates to experiencing less disruptions generated by the defense.
 
@@ -171,10 +182,10 @@ Our proposed framework is not without limitations.
 First, to identify the start of motion, we use a threshold-based criterion which relies only a fraction of a player's top speed prior to the snap.
 This is certainly a simple viewpoint, as one could come up with a more rigid definition by building a model to predict the starting motion frame.
 Further, despite the reasonable set of inputs in our proposed clustering algorithm, there is certainly room for improvement in identifying the motion types by having more refined features (e.g., [[TODO: fill these in. what are these?]]), or alternatively using a functional clustering approach.
-Since either of these task is the main focus of our work, we leave these explorations for the future.
+Since neither of these task is the main focus of our work, we leave these explorations for the future.
 
 
-# Appendix
+# Appendix {-}
 
 All code is available at https://github.com/qntkhvn/timing.
 
